syntax = "proto3";

option go_package = "Go/protobuf";

// Represents a message sent over a WebSocket connection.
message WebsocketMessage {
    // The actual content of the message.
    string content = 1;

    // The unique identifier of the sender.
    string senderId = 2;

    // The unique identifier of the receiver.
    string receiverId = 3;
}
